Layout corrigido .. AGORA VAI

--- a/ProjetoMavenJSFPrimeFacesComJPAFinal/src/main/webapp/pages/registerTest.xhtml
+++ b/ProjetoMavenJSFPrimeFacesComJPAFinal/src/main/webapp/pages/registerTest.xhtml
@@ -113,7 +113,7 @@
   	<br/>
   		<p:commandButton value="Generate" id="generatePDF"
   		action="#{testManagedBean.generateTest}" 
-  		styleClass="ui-priority-primary" ajax="false" update=":formGenerate, :formShowTest, :formTest"/>
+  		styleClass="ui-priority-primary" ajax="false" update=":formGenerate, :formShowTest"/>
   	</h:form>
 	
 	
