Ultimo commit .. layout ok

--- a/ProjetoMavenJSFPrimeFacesComJPAFinal/src/main/webapp/pages/comuns/cabecalho.xhtml
+++ b/ProjetoMavenJSFPrimeFacesComJPAFinal/src/main/webapp/pages/comuns/cabecalho.xhtml
@@ -4,6 +4,13 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 	<h:panelGrid columns="1" width="100%">		
+	
+	    <p:panel id="indexContent">
+            <p:graphicImage 
+					    library="sistema" 
+						name="imagens/alien-logo.png"/>
+						
+        </p:panel>
 		<p:outputLabel value="#{msg['pages.comuns.cabecalho.headerText']}" />
         
 	</h:panelGrid>
