--- a/ProjetoMavenJSFPrimeFacesComJPAFinal/src/main/webapp/pages/comuns/cabecalho.xhtml
+++ b/ProjetoMavenJSFPrimeFacesComJPAFinal/src/main/webapp/pages/comuns/cabecalho.xhtml
@@ -8,7 +8,7 @@
 	    <p:panel id="indexContent">
             <p:graphicImage 
 					    library="sistema" 
-						name="imagens/alien-logo.png"/>
+						name="imagens/alien-logo.png.png"/>
 						
         </p:panel>
 		<p:outputLabel value="#{msg['pages.comuns.cabecalho.headerText']}" />
